# arkui_ace_engine

./: .clang-format  .gitignore  0001-.patch  101.diff.txt  1130.diff  1212br.patch  2022111001_button_test.diff  32391.diff.txt  32753.diff  35460.diff:Zone.Identifier  46328.diff  90ef4522.diff  AGENTS.md  BUILD.gn  CLAUDE.md  OAT.xml  README.md  README_zh.md  ace_config.gni  ace_engine.diff  ace_unittest.gni  application_shortcut_global_uicontext_plan.md  arkui_framework.html  arkui_node_tree.html  bundle.json  dif.pat  feature.diff  idlize_config.gni  menu归一化_模块化接口行为对照.xlsx  swiper.patch  test.h  tmp.diff  共享元素沙箱重构.md  如何新增一个组件.md  组件化重构通用方案.md
adapter/ohos/entrance/: BUILD.gn  ace_ability.cpp  ace_ability.h  ace_application_info.cpp  ace_container.cpp  ace_container.h  ace_container_hybrid_impl.cpp  ace_data_ability.cpp  ace_data_ability.h  ace_extra_input_data.cpp  ace_form_ability.cpp  ace_form_ability.h  ace_new_pipe_judgement.cpp  ace_new_pipe_judgement.h  ace_service_ability.cpp  (+58 more)
advanced_ui_component_static/: BUILD.gn  CLAUDE.md
advanced_ui_component_static/arcbutton/: @ohos.arkui.advanced.ArcButton.ets  BUILD.gn
advanced_ui_component_static/arcslider/: @ohos.arkui.advanced.ArcSlider.ets  BUILD.gn
advanced_ui_component_static/assembled_advanced_ui_component/: @ohos.arkui.advanced.ArcButton.ets  @ohos.arkui.advanced.ArcSlider.ets  @ohos.arkui.advanced.Chip.ets  @ohos.arkui.advanced.ChipGroup.ets  @ohos.arkui.advanced.ChipGroupV2.ets  @ohos.arkui.advanced.ChipV2.ets  @ohos.arkui.advanced.ComposeListItem.ets  @ohos.arkui.advanced.ComposeListItemV2.ets  @ohos.arkui.advanced.ComposeTitleBar.ets  @ohos.arkui.advanced.ComposeTitleBarV2.ets  @ohos.arkui.advanced.Counter.ets  @ohos.arkui.advanced.CounterV2.ets  @ohos.arkui.advanced.DatePickerComponent.ets  @ohos.arkui.advanced.Dialog.ets  @ohos.arkui.advanced.DialogV2.ets  @ohos.arkui.advanced.EditableTitleBar.ets  @ohos.arkui.advanced.EditableTitleBarV2.ets  @ohos.arkui.advanced.ExceptionPrompt.ets  @ohos.arkui.advanced.ExceptionPromptV2.ets  @ohos.arkui.advanced.Filter.ets  @ohos.arkui.advanced.FilterV2.ets  @ohos.arkui.advanced.FoldSplitContainer.ets  @ohos.arkui.advanced.GridObjectSortComponent.ets  @ohos.arkui.advanced.GridObjectSortComponentV2.ets  @ohos.arkui.advanced.MultiNavigation.ets  @ohos.arkui.advanced.Popup.ets  @ohos.arkui.advanced.PopupV2.ets  @ohos.arkui.advanced.ProgressButton.ets  @ohos.arkui.advanced.ProgressButtonV2.ets  @ohos.arkui.advanced.SegmentButton.ets  @ohos.arkui.advanced.SegmentButtonV2.ets  @ohos.arkui.advanced.SelectTitleBar.ets  @ohos.arkui.advanced.SelectTitleBarV2.ets  @ohos.arkui.advanced.SelectionMenu.ets  @ohos.arkui.advanced.SplitLayout.ets  @ohos.arkui.advanced.SplitLayoutV2.ets  @ohos.arkui.advanced.SubHeader.ets  @ohos.arkui.advanced.SubHeaderV2.ets  @ohos.arkui.advanced.SwipeRefresher.ets  @ohos.arkui.advanced.SwipeRefresherV2.ets  (+7 more)
advanced_ui_component_static/chip/: @ohos.arkui.advanced.Chip.ets  BUILD.gn
advanced_ui_component_static/chipgroup/: @ohos.arkui.advanced.ChipGroup.ets  BUILD.gn
advanced_ui_component_static/composeListItem/: @ohos.arkui.advanced.ComposeListItem.ets  BUILD.gn
advanced_ui_component_static/composetitlebar/: @ohos.arkui.advanced.ComposeTitleBar.ets  BUILD.gn
advanced_ui_component_static/counter/: @ohos.arkui.advanced.Counter.ets  BUILD.gn
advanced_ui_component_static/dialog/: @ohos.arkui.advanced.Dialog.ets  BUILD.gn
advanced_ui_component_static/dialogv2/: @ohos.arkui.advanced.DialogV2.ets  BUILD.gn
advanced_ui_component_static/downloadfilebutton/: @ohos.arkui.advanced.DownloadFileButton.ets  BUILD.gn  ohos.arkui.advanced.DownloadFileButton.ets
advanced_ui_component_static/editabletitlebar/: @ohos.arkui.advanced.EditableTitleBar.ets  BUILD.gn
advanced_ui_component_static/exceptionprompt/: @ohos.arkui.advanced.ExceptionPrompt.ets  BUILD.gn
advanced_ui_component_static/filter/: @ohos.arkui.advanced.Filter.ets  BUILD.gn
advanced_ui_component_static/foldsplitcontainer/: @ohos.arkui.advanced.FoldSplitContainer.ets  BUILD.gn
advanced_ui_component_static/formmenu/: BUILD.gn
advanced_ui_component_static/fullscreenlaunchcomponent/: @ohos.arkui.advanced.FullScreenLaunchComponent.ets  BUILD.gn
advanced_ui_component_static/gridobjectsortcomponent/: @ohos.arkui.advanced.GridObjectSortComponent.ets  BUILD.gn
advanced_ui_component_static/multiNavigation/: @ohos.arkui.advanced.MultiNavigation.ets
advanced_ui_component_static/multinavigation/: @ohos.arkui.advanced.MultiNavigation.ets  BUILD.gn
advanced_ui_component_static/popup/: @ohos.arkui.advanced.Popup.ets  BUILD.gn
advanced_ui_component_static/progressbutton/: @ohos.arkui.advanced.ProgressButton.ets  BUILD.gn
advanced_ui_component_static/progressbuttonV2/: @ohos.arkui.advanced.ProgressButtonV2.ets  BUILD.gn
advanced_ui_component_static/segmentbutton/: @ohos.arkui.advanced.SegmentButton.ets  BUILD.gn
advanced_ui_component_static/segmentbuttonv2/: @ohos.arkui.advanced.SegmentButtonV2.ets  BUILD.gn
advanced_ui_component_static/selectionmenu/: @ohos.arkui.advanced.SelectionMenu.ets  BUILD.gn
advanced_ui_component_static/selecttitlebar/: @ohos.arkui.advanced.SelectTitleBar.ets  BUILD.gn
advanced_ui_component_static/splitlayout/: @ohos.arkui.advanced.SplitLayout.ets  BUILD.gn
advanced_ui_component_static/subheader/: @ohos.arkui.advanced.SubHeader.ets  BUILD.gn
advanced_ui_component_static/subheaderv2/: @ohos.arkui.advanced.SubHeaderV2.ets  BUILD.gn
advanced_ui_component_static/swiperefresher/: @ohos.arkui.advanced.SwipeRefresher.ets  BUILD.gn  arkui_ace_engine.code-workspace
advanced_ui_component_static/tabtitlebar/: @ohos.arkui.advanced.TabTitleBar.ets  BUILD.gn
advanced_ui_component_static/toolbar/: @ohos.arkui.advanced.ToolBar.ets  BUILD.gn
advanced_ui_component_static/toolbarv2/: @ohos.arkui.advanced.ToolBarV2.ets  BUILD.gn
advanced_ui_component_static/treeview/: @ohos.arkui.advanced.TreeView.ets  BUILD.gn
component_ext/movingphoto_ani/: BUILD.gn  arktsconfig.json
frameworks/compatible/: BUILD.gn
test/unittest/: BUILD.gn  ace_unittest.gni
(+25766 files in other folders)
