# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

group("advanced_ui_component_static") {
  deps = [
    "dialog:dialog",
    "dialogv2:dialogV2",
  ]
  if (!ace_engine_feature_wearable) {
    deps += [
      "treeview:treeView",
      "gridobjectsortcomponent:gridObjectSortComponent",
      "counter:counter",
      "composeListItem:composeListItem",
      "foldsplitcontainer:foldSplitContainer",
      "fullscreenlaunchcomponent:fullScreenLaunch",
      "segmentbutton:segmentButton",
      "segmentbuttonv2:SegmentButtonV2",
      "selectionmenu:selectionMenu",
      "splitlayout:splitLayout",
      "swiperefresher:swipeRefresher",
      "multinavigation:multiNavigation",
      "subheaderv2:subHeaderV2",
      "composetitlebar:composeTitleBar",
      "editabletitlebar:editableTitleBar",
      "subheader:subHeader",
      "toolbarv2:toolBarV2",
      "chip:chip",
      "chipgroup:chipGroup",
      "selecttitlebar:selectTitleBar",
      "progressbutton:progressButton",
      "progressbuttonV2:progressButtonV2",
      "tabtitlebar:tabTitleBar",
      "exceptionprompt:exceptionPrompt",
      "toolbar:toolBar",
      "filter:Filter",
      "formmenu:formMenu",
      "arcslider:arcSlider",
    ]
  }
}
