# Copyright (c) 2025-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//build/ohos.gni")

generate_static_abc("assembled_advanced_ets_abc") {
  base_url = "./"
  files = [ 
    "./@ohos.arkui.advanced.Dialog.ets",
    "./@ohos.arkui.advanced.DialogV2.ets",
  ]
  if (!ace_engine_feature_wearable) { 
    files += [
      "./@ohos.arkui.advanced.ComposeListItem.ets",
      "./@ohos.arkui.advanced.ComposeTitleBar.ets",
      "./@ohos.arkui.advanced.EditableTitleBar.ets",
      "./@ohos.arkui.advanced.ExceptionPrompt.ets",
      "./@ohos.arkui.advanced.Filter.ets",
      "./@ohos.arkui.advanced.GridObjectSortComponent.ets",
      "./@ohos.arkui.advanced.ProgressButton.ets",
      "./@ohos.arkui.advanced.ProgressButtonV2.ets",
      "./@ohos.arkui.advanced.SelectTitleBar.ets",
      "./@ohos.arkui.advanced.SplitLayout.ets",
      "./@ohos.arkui.advanced.SubHeader.ets",
      "./@ohos.arkui.advanced.SubHeaderV2.ets",
      "./@ohos.arkui.advanced.SwipeRefresher.ets",
      "./@ohos.arkui.advanced.TabTitleBar.ets",
      "./@ohos.arkui.advanced.ToolBar.ets",
      "./@ohos.arkui.advanced.ToolBarV2.ets",
      "./@ohos.arkui.advanced.TreeView.ets",
    ]
  }
  ui_enable = "True"
  is_boot_abc = "True"
  device_dst_file = "/system/framework/assembled_advanced_ets_abc.abc"
  dst_file = target_out_dir + "/assembled_advanced_ets_abc/modules_static.abc"
  out_puts = [ target_out_dir + "/assembled_advanced_ets_abc/modules_static.abc" ]
}

ohos_copy("copy_assembled_advanced_ets_abc") {
  sources = [
    target_out_dir + "/assembled_advanced_ets_abc/modules_static.abc"
  ]
  outputs = [
    target_out_dir + "/assembled_advanced_ets_abc.abc"
  ]
  deps = [ ":assembled_advanced_ets_abc" ]
}

ohos_prebuilt_etc("assembled_advanced_ets_abc_etc") {
  source = "$target_out_dir/assembled_advanced_ets_abc.abc"
  module_install_dir = "framework"
  subsystem_name = "arkui"
  part_name = "ace_engine"
  deps = [ ":copy_assembled_advanced_ets_abc" ]
}

group("assembledAdvanced"){
    deps = [":assembled_advanced_ets_abc_etc"]
}
