# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/arkui/ace_engine/build/ace_gen_obj.gni")

component_ext_path = "${ace_root}/component_ext"

additional_include_dirs = [ "${ace_root}" ]

ohos_shared_library("movingphotoview_ani") {
  defines = [ "USE_ARK_ENGINE" ]
  sources = [
    "./src/movingphotoview_ani.cpp",
    "./src/ani_utils.cpp",
    "${component_ext_path}/movingphoto/movingphoto_layout_algorithm.cpp",
    "${component_ext_path}/movingphoto/movingphoto_model_ng.cpp",
    "${component_ext_path}/movingphoto/movingphoto_node.cpp",
    "${component_ext_path}/movingphoto/movingphoto_pattern.cpp",
  ]

  include_dirs = [
    "${component_ext_path}/ext_common/",
    "${component_ext_path}/movingphoto/",
    "$ace_root/frameworks/",
  ]
  include_dirs += additional_include_dirs

  configs = [ "$ace_root/interfaces/inner_api/ace_kit:ace_kit_config" ]

  deps = [
    ":movingphotoview_abc_etc",
    "$ace_root/build:libace_compatible",
    "$ace_root/frameworks/core:ace_container_scope",
    "$ace_root/interfaces/inner_api/ace:ace_uicontent",
    "$ace_root/interfaces/napi/kits/plugincomponent:plugincomponent",
  ]

  external_deps = [
    "runtime_core:ani",
    "runtime_core:ani_helpers",
    "bounds_checking_function:libsec_static",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "image_framework:image",
    "image_framework:image_native",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.multimedia_media_library)) {
    external_deps += [ "media_library:media_library_manager" ]
  }

  ldflags = [ "-Wl,--gc-sections" ]

  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Os",
  ]

  part_name = "ace_engine"
  subsystem_name = ace_engine_subsystem
  part_name = ace_engine_part
  output_extension = "so"
}

generate_static_abc("movingphotoview_abc") {
  base_url = "./ets"
  files = [
    "./ets/movingphotoview.ets"
  ]
  paths_keys = [
    "arkui/component/common",
    "arkui/ComponentBase",
    "arkui/PeerNode",
    "arkui/NativePeerNode",
    "arkui/ReusablePool",
    "@koalaui/runtime",
    "@koalaui/common",
    "@koalaui/compat",
    "@koalaui/interop",
    "@koalaui/interop/Finalizable",
    "@koalaui/interop/SerializerBase",
    "@koalaui/runtime/annotations",
    "@koalaui/runtime/memo/node",
    "@koalaui/runtime/memo/remember",
    "@koalaui/runtime/states/Disposable",
    "@koalaui/runtime/tree/IncrementalNode",
    "@koalaui/common/koalaKey",
    "@koalaui/runtime/internals"
  ]

  paths_values = [
    "$ohos_ets_inner_path/arkui/component/common.d.ets",
    "$ohos_ets_inner_path/arkui/ComponentBase.d.ets",
    "$ohos_ets_inner_path/arkui/PeerNode.d.ets",
    "$ohos_ets_inner_path/arkui/NativePeerNode.d.ets",
    "$ohos_ets_inner_path/arkui/ReusablePool.d.ets",
    "$ohos_ets_inner_path/@koalaui/runtime.d.ets",
    "$ohos_ets_inner_path/@koalaui/common.d.ets",
    "$ohos_ets_inner_path/@koalaui/compat.d.ets",
    "$ohos_ets_inner_path/@koalaui/interop.d.ets",
    "$ohos_ets_inner_path/@koalaui/interop/Finalizable.d.ets",
    "$ohos_ets_inner_path/@koalaui/interop/SerializerBase.d.ets",
    "$ohos_ets_inner_path/@koalaui/runtime/annotations.d.ets",
    "$ohos_ets_inner_path/@koalaui/runtime/memo/node.d.ets",
    "$ohos_ets_inner_path/@koalaui/runtime/memo/remember.d.ets",
    "$ohos_ets_inner_path/@koalaui/runtime/states/Disposable.d.ets",
    "$ohos_ets_inner_path/@koalaui/runtime/tree/IncrementalNode.d.ets",
    "$ohos_ets_inner_path/@koalaui/common/koalaKey.d.ets",
    "$ohos_ets_inner_path/@koalaui/runtime/internals.d.ets"
  ]
  device_dst_file = "/system/framework/movingphotoview.abc"
  dst_file = target_out_dir + "/movingphotoview.abc"
  out_puts = [ target_out_dir + "/movingphotoview.abc" ]
  is_boot_abc = "True"
  dependencies = [ "$ace_root/frameworks/bridge/arkts_frontend/koala_projects/inner_api:copy_arkui_ets" ]
  ui_enable = "True"
  only_memo = "True"
}

ohos_prebuilt_etc("movingphotoview_abc_etc") {
  source = target_out_dir + "/movingphotoview.abc"
  deps = [ ":movingphotoview_abc" ]
  module_install_dir = "framework"
  subsystem_name = "arkui"
  part_name = "ace_engine"
}