# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import(
"//foundation/arkui/ace_engine/frameworks/core/components/components.gni")

ohos_source_set("ace_compatible_source") {
  defines = []
  if (defined(current_platform.name)) {
    cflags_cc = []
    config = {
    }
    if (defined(current_platform.config)) {
      config = current_platform.config
    }
    if (defined(config.defines)) {
      defines += config.defines
    }
    if (defined(config.cflags_cc)) {
      cflags_cc += config.cflags_cc
    }
  }
  defines += [
      "ENABLE_ROSEN_BACKEND",
      "USE_ARK_ENGINE",
    ]
  configs = [ "$ace_root:ace_config" ]

  sources = [
    "components/badge/badge_component.cpp",
    "components/badge/badge_composed_element.cpp",
    "components/badge/badge_declaration.cpp",
    "components/badge/badge_loader.cpp",
    "components/badge/badge_model_impl.cpp",
    "components/badge/dom_badge.cpp",
    "components/badge/render_badge.cpp",
    "components/badge/render_badge_creator.cpp",
    "components/badge/rosen_render_badge.cpp",
    "components/component_loader.cpp",
    "components/grid_column/dom_grid_column.cpp",
    "components/grid_column/grid_col_component.cpp",
    "components/grid_column/grid_col_composed_element.cpp",
    "components/grid_column/grid_col_loader.cpp",
    "components/grid_column/grid_col_model_impl.cpp",
    "components/grid_column/render_grid_col.cpp",
    "components/grid_container/dom_grid_container_utils.cpp",
    "components/grid_container/dom_grid_container.cpp",
    "components/grid_container/grid_container_composed_element.cpp",
    "components/grid_container/grid_container_loader.cpp",
    "components/grid_container/grid_container_model_impl.cpp",
    "components/grid_container/grid_container_type.cpp",
    "components/grid_row/dom_grid_row.cpp",
    "components/grid_row/grid_row_composed_element.cpp",
    "components/grid_row/grid_row_loader.cpp",
    "components/grid_row/grid_row_model_impl.cpp",
    "components/grid_row/render_grid_row.cpp",
    "components/grid_row/grid_row_component.cpp",
    "components/image-animator/dom_image_animator.cpp",
    "components/image-animator/image_animator_compatible_modifier.cpp",
    "components/image-animator/image_animator_component.cpp",
    "components/image-animator/image_animator_composed_element.cpp",
    "components/image-animator/image_animator_declaration.cpp",
    "components/image-animator/image_animator_element.cpp",
    "components/image-animator/image_animator_loader.cpp",
    "components/image-animator/image_animator_model_impl.cpp",
    "components/label/dom_label.cpp",
    "components/label/label_loader.cpp",
    "components/label/modifier/label_modifier.cpp",
    "components/marquee/dom_marquee.cpp",
    "components/marquee/marquee_composed_element.cpp",
    "components/marquee/marquee_loader.cpp",
    "components/marquee/marquee_model_impl.cpp",
    "components/marquee/render_marquee.cpp",
    "components/marquee/render_marquee_creator.cpp",
    "components/marquee/rosen_render_marquee.cpp",
    "components/picker/date_picker_composed_element.cpp",
    "components/picker/date_picker_dialog_composed_element.cpp",
    "components/picker/picker_loader.cpp",
    "components/picker/dom_picker_base.cpp",
    "components/picker/dom_picker_dialog.cpp",
    "components/picker/picker_animation_controller.cpp",
    "components/picker/picker_animation.cpp",
    "components/picker/picker_base_component.cpp",
    "components/picker/picker_base_element.cpp",
    "components/picker/picker_column_component.cpp",
    "components/picker/picker_column_element.cpp",
    "components/picker/picker_date_component.cpp",
    "components/picker/picker_datetime_component.cpp",
    "components/picker/picker_model_impl.cpp",
    "components/picker/picker_multitext_component.cpp",
    "components/picker/picker_option_component.cpp",
    "components/picker/picker_option_element.cpp",
    "components/picker/picker_text_component.cpp",
    "components/picker/picker_text_dialog_composed_element.cpp",
    "components/picker/picker_time_component.cpp",
    "components/picker/picker_value_element.cpp",
    "components/picker/render_picker_base.cpp",
    "components/picker/render_picker_base_creator.cpp",
    "components/picker/render_picker_column.cpp",
    "components/picker/render_picker_column_creator.cpp",
    "components/picker/render_picker_option.cpp",
    "components/picker/render_picker_value.cpp",
    "components/picker/rosen_render_picker_base.cpp",
    "components/picker/text_picker_composed_element.cpp",
    "components/picker/textpicker_model_impl.cpp",
    "components/picker/time_picker_composed_element.cpp",
    "components/picker/time_picker_dialog_composed_element.cpp",
    "components/picker/timepicker_model_impl.cpp",
    "components/picker/toss_animation_controller.cpp",
    "components/picker-view/dom_picker_view.cpp",
    "components/picker-view/picker_view_loader.cpp",
    "components/refresh/dom_refresh.cpp",
    "components/refresh/refresh_component.cpp",
    "components/refresh/refresh_composed_element.cpp",
    "components/refresh/refresh_element.cpp",
    "components/refresh/refresh_loader.cpp",
    "components/refresh/refresh_model_impl.cpp",
    "components/refresh/refresh_modifier.cpp",
    "components/refresh/render_refresh.cpp",
    "components/refresh/render_refresh_creator.cpp",
    "components/refresh/rosen_render_refresh.cpp",
    "components/rating/dom_rating.cpp",
    "components/rating/rating_composed_element.cpp",
    "components/rating/rating_component.cpp",
    "components/rating/rating_loader.cpp",
    "components/rating/rating_model_impl.cpp",
    "components/rating/render_rating.cpp",
    "components/rating/render_rating_creator.cpp",
    "components/rating/rosen_render_rating.cpp",
    "components/svg/dom_svg.cpp",
    "components/svg/dom_svg_animate.cpp",
    "components/svg/dom_svg_animate_motion.cpp",
    "components/svg/dom_svg_animate_transform.cpp",
    "components/svg/dom_svg_base.cpp",
    "components/svg/dom_svg_circle.cpp",
    "components/svg/dom_svg_defs.cpp",
    "components/svg/dom_svg_ellipse.cpp",
    "components/svg/dom_svg_fe_colormatrix.cpp",
    "components/svg/dom_svg_fe_composite.cpp",
    "components/svg/dom_svg_fe_gaussianblur.cpp",
    "components/svg/dom_svg_fe_offset.cpp",
    "components/svg/dom_svg_filter.cpp",
    "components/svg/dom_svg_g.cpp",
    "components/svg/dom_svg_line.cpp",
    "components/svg/dom_svg_mask.cpp",
    "components/svg/dom_svg_path.cpp",
    "components/svg/dom_svg_polygon.cpp",
    "components/svg/dom_svg_polyline.cpp",
    "components/svg/dom_svg_rect.cpp",
    "components/svg/dom_svg_text.cpp",
    "components/svg/dom_svg_text_path.cpp",
    "components/svg/dom_svg_tspan.cpp",
    "components/svg/dom_svg_use.cpp",
    "components/svg/parse/svg_animation.cpp",
    "components/svg/parse/svg_circle.cpp",
    "components/svg/parse/svg_clip_path.cpp",
    "components/svg/parse/svg_dom.cpp",
    "components/svg/parse/svg_ellipse.cpp",
    "components/svg/parse/svg_fe_colormatrix.cpp",
    "components/svg/parse/svg_fe_composite.cpp",
    "components/svg/parse/svg_fe_gaussianblur.cpp",
    "components/svg/parse/svg_fe_offset.cpp",
    "components/svg/parse/svg_filter.cpp",
    "components/svg/parse/svg_g.cpp",
    "components/svg/parse/svg_gradient.cpp",
    "components/svg/parse/svg_line.cpp",
    "components/svg/parse/svg_mask.cpp",
    "components/svg/parse/svg_node.cpp",
    "components/svg/parse/svg_path.cpp",
    "components/svg/parse/svg_pattern.cpp",
    "components/svg/parse/svg_polygon.cpp",
    "components/svg/parse/svg_rect.cpp",
    "components/svg/parse/svg_stop.cpp",
    "components/svg/parse/svg_style.cpp",
    "components/svg/parse/svg_svg.cpp",
    "components/svg/parse/svg_use.cpp",
    "components/svg/render_svg.cpp",
    "components/svg/render_svg_base.cpp",
    "components/svg/render_svg_circle.cpp",
    "components/svg/render_svg_circle_creator.cpp",
    "components/svg/render_svg_creator.cpp",
    "components/svg/render_svg_defs.cpp",
    "components/svg/render_svg_ellipse.cpp",
    "components/svg/render_svg_ellipse_creator.cpp",
    "components/svg/render_svg_fe.cpp",
    "components/svg/render_svg_fe_colormatrix.cpp",
    "components/svg/render_svg_fe_colormatrix_creator.cpp",
    "components/svg/render_svg_fe_composite.cpp",
    "components/svg/render_svg_fe_composite_creator.cpp",
    "components/svg/render_svg_fe_gaussianblur.cpp",
    "components/svg/render_svg_fe_gaussianblur_creator.cpp",
    "components/svg/render_svg_fe_offset.cpp",
    "components/svg/render_svg_fe_offset_creator.cpp",
    "components/svg/render_svg_filter.cpp",
    "components/svg/render_svg_filter_creator.cpp",
    "components/svg/render_svg_g.cpp",
    "components/svg/render_svg_g_creator.cpp",
    "components/svg/render_svg_line.cpp",
    "components/svg/render_svg_line_creator.cpp",
    "components/svg/render_svg_mask.cpp",
    "components/svg/render_svg_mask_creator.cpp",
    "components/svg/render_svg_path.cpp",
    "components/svg/render_svg_path_creator.cpp",
    "components/svg/render_svg_pattern.cpp",
    "components/svg/render_svg_pattern_creator.cpp",
    "components/svg/render_svg_polygon.cpp",
    "components/svg/render_svg_polygon_creator.cpp",
    "components/svg/render_svg_rect.cpp",
    "components/svg/render_svg_rect_creator.cpp",
    "components/svg/render_svg_text.cpp",
    "components/svg/render_svg_text_creator.cpp",
    "components/svg/render_svg_text_path.cpp",
    "components/svg/render_svg_text_path_creator.cpp",
    "components/svg/render_svg_tspan_creator.cpp",
    "components/svg/render_svg_use.cpp",
    "components/svg/render_svg_use_creator.cpp",
    "components/svg/rosen_render_svg.cpp",
    "components/svg/rosen_render_svg_circle.cpp",
    "components/svg/rosen_render_svg_ellipse.cpp",
    "components/svg/rosen_render_svg_fe_colormatrix.cpp",
    "components/svg/rosen_render_svg_fe_composite.cpp",
    "components/svg/rosen_render_svg_fe_gaussianblur.cpp",
    "components/svg/rosen_render_svg_fe_offset.cpp",
    "components/svg/rosen_render_svg_filter.cpp",
    "components/svg/rosen_render_svg_g.cpp",
    "components/svg/rosen_render_svg_line.cpp",
    "components/svg/rosen_render_svg_mask.cpp",
    "components/svg/rosen_render_svg_path.cpp",
    "components/svg/rosen_render_svg_pattern.cpp",
    "components/svg/rosen_render_svg_polygon.cpp",
    "components/svg/rosen_render_svg_rect.cpp",
    "components/svg/rosen_render_svg_text.cpp",
    "components/svg/rosen_render_svg_text_path.cpp",
    "components/svg/rosen_render_svg_tspan.cpp",
    "components/svg/rosen_render_svg_use.cpp",
    "components/svg/svg_animate_declaration.cpp",
    "components/svg/svg_base_declaration.cpp",
    "components/svg/svg_circle_component.cpp",
    "components/svg/svg_circle_declaration.cpp",
    "components/svg/svg_compatible_modifier.cpp",
    "components/svg/svg_component.cpp",
    "components/svg/svg_declaration.cpp",
    "components/svg/svg_defs_component.cpp",
    "components/svg/svg_ellipse_component.cpp",
    "components/svg/svg_ellipse_declaration.cpp",
    "components/svg/svg_fe_blend_declaration.cpp",
    "components/svg/svg_fe_colormatrix_component.cpp",
    "components/svg/svg_fe_colormatrix_declaration.cpp",
    "components/svg/svg_fe_component_transfer_declaration.cpp",
    "components/svg/svg_fe_composite_component.cpp",
    "components/svg/svg_fe_composite_declaration.cpp",
    "components/svg/svg_fe_declaration.cpp",
    "components/svg/svg_fe_flood_declaration.cpp",
    "components/svg/svg_fe_func_declaration.cpp",
    "components/svg/svg_fe_gaussianblur_component.cpp",
    "components/svg/svg_fe_gaussianblur_declaration.cpp",
    "components/svg/svg_fe_merge_declaration.cpp",
    "components/svg/svg_fe_merge_node_declaration.cpp",
    "components/svg/svg_fe_offset_component.cpp",
    "components/svg/svg_fe_offset_declaration.cpp",
    "components/svg/svg_filter_component.cpp",
    "components/svg/svg_filter_declaration.cpp",
    "components/svg/svg_g_component.cpp",
    "components/svg/svg_gradient_declaration.cpp",
    "components/svg/svg_image_declaration.cpp",
    "components/svg/svg_line_component.cpp",
    "components/svg/svg_line_declaration.cpp",
    "components/svg/svg_loader.cpp",
    "components/svg/svg_mask_component.cpp",
    "components/svg/svg_mask_declaration.cpp",
    "components/svg/svg_path_component.cpp",
    "components/svg/svg_path_declaration.cpp",
    "components/svg/svg_pattern_component.cpp",
    "components/svg/svg_pattern_declaration.cpp",
    "components/svg/svg_polygon_component.cpp",
    "components/svg/svg_polygon_declaration.cpp",
    "components/svg/svg_rect_component.cpp",
    "components/svg/svg_rect_declaration.cpp",
    "components/svg/svg_stop_declaration.cpp",
    "components/svg/svg_text_component.cpp",
    "components/svg/svg_text_declaration.cpp",
    "components/svg/svg_text_path_component.cpp",
    "components/svg/svg_text_path_declaration.cpp",
    "components/svg/svg_tspan_component.cpp",
    "components/svg/svg_use_component.cpp",
    "components/tab_bar/dom/dom_tab_bar.cpp",
    "components/tab_bar/dom/dom_tab_content.cpp",
    "components/tab_bar/dom/dom_tabs.cpp",
    "components/tab_bar/models/tab_content_model_impl.cpp",
    "components/tab_bar/models/tabs_model_impl.cpp",
    "components/tab_bar/modifier/tab_modifier.cpp",
    "components/tab_bar/render_tab_bar.cpp",
    "components/tab_bar/render_tab_bar_creator.cpp",
    "components/tab_bar/render_tab_bar_item.cpp",
    "components/tab_bar/render_tab_bar_item_creator.cpp",
    "components/tab_bar/render_tab_content.cpp",
    "components/tab_bar/render_tab_content_creator.cpp",
    "components/tab_bar/rosen_render_tab_bar.cpp",
    "components/tab_bar/rosen_render_tab_bar_item.cpp",
    "components/tab_bar/rosen_render_tab_content.cpp",
    "components/tab_bar/tab_bar_component.cpp",
    "components/tab_bar/tab_bar_element.cpp",
    "components/tab_bar/tab_bar_indicator_component.cpp",
    "components/tab_bar/tab_bar_item_component.cpp",
    "components/tab_bar/tab_bar_size_animation.cpp",
    "components/tab_bar/tab_content_component.cpp",
    "components/tab_bar/tab_content_element.cpp",
    "components/tab_bar/tab_controller.cpp",
    "components/tab_bar/tab_loader.cpp",
    "components/tab_bar/v2/tab_content_composed_element.cpp",
    "components/tab_bar/v2/tab_content_item_component.cpp",
    "components/tab_bar/v2/tab_content_item_element.cpp",
    "components/tab_bar/v2/tab_content_proxy_element.cpp",
    "components/tab_bar/v2/tabs_component.cpp",
    "components/tab_bar/v2/tabs_composed_element.cpp",
    "components/tab_bar/v2/tabs_element.cpp",
    "components/video/dom_video.cpp",
    "components/video/render_texture_creator.cpp",
    "components/video/render_texture.cpp",
    "components/video/rosen_render_texture.cpp",
    "components/video/texture_component.cpp",
    "components/video/video_component_v2.cpp",
    "components/video/video_component.cpp",
    "components/video/video_element_v2.cpp",
    "components/video/video_element.cpp",
    "components/video/video_loader.cpp",
    "components/video/video_model_impl.cpp",

    "components/clock/clock_component.cpp",
    "components/clock/clock_declaration.cpp",
    "components/clock/dom_clock.cpp",
    "components/clock/render_clock.cpp",
    "components/clock/render_clock_creator.cpp",
    "components/clock/rosen_render_clock.cpp",
    "components/clock/clock_loader.cpp",
  ]

  if (qrcodegen_support) {
    sources += [
      "components/qrcode/dom_qrcode.cpp",
      "components/qrcode/qrcode_model_impl.cpp",
      "components/qrcode/qrcode_component.cpp",
      "components/qrcode/qrcode_composed_element.cpp",
      "components/qrcode/qrcode_declaration.cpp",
      "components/qrcode/qrcode_loader.cpp",
      "components/qrcode/render_qrcode.cpp",
      "components/qrcode/render_qrcode_creator.cpp",
      "components/qrcode/rosen_render_qrcode.cpp",
    ]
  }
  external_deps = [
    "graphic_2d:2d_graphics",
    "graphic_2d:librender_service_base",
    "graphic_2d:librender_service_client",
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "napi:ace_napi",
  ]
  deps = [
    "$ace_root/frameworks/core:ace_container_scope",
    "$ace_root/frameworks/core/components/theme:build_theme_code",
  ]

  subsystem_name = ace_engine_subsystem
  part_name = ace_engine_part

  if (ohos_indep_compiler_enable) {
    include_dirs = indep_compile_includes
  }
  if (qrcodegen_support) {
    if (is_arkui_x) {
        deps += [ "//third_party/qrcodegen:ace_engine_qrcode" ]
    } else {
        external_deps += [ "qrcodegen:ace_engine_qrcode" ]
    }
  }
}
